# LlamaCon-SF-2025-05-ghost-writers-ai

./: .env-example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  tavusapi_response.json  test-README.md  test-character-creation.js  test-package.json  test-tavus-api-advanced.js  test-tavus-api-fixed.js  test-tavus-api.js  test-tavus-api.sh
ai_docs/: crew-ai-effective-agent  crew-ai-quickstart.md  llama_api_chat_completion_reference.md  prompts.md
back-end/temp/: llama_client.py
backend/: TICKETS-BE.md  requirements.txt  server.py
backend/app/: __init__.py  main.py
backend/app/routers/: __init__.py  agents.py  auth.py  characters.py  export.py  memory.py  projects.py  scenes.py  tavus.py
backend/app/services/: crew_service.py
backend/tests/: test_characters.py  test_health.py  test_memory.py  test_projects.py  test_scenes.py
front-end/project/: .env.local.example  FRONTEND-TO-BACKEND-REPORT.md  TICKETS-BE.md  TICKETS.md  middleware.ts  next.config.js  package-lock.json  package.json  tavus-prompts.json
front-end/project/app/: layout.tsx  not-found.tsx  page.tsx
front-end/project/app/api/: middleware.ts
front-end/project/app/dashboard/: page.tsx
front-end/project/app/onboarding/: page.tsx
front-end/project/app/signin/: page.tsx
front-end/project/app/support/: page.tsx
front-end/project/lib/: api-client.ts  auth-context.tsx  characters-data.ts  db-migrate.ts  db.ts  error-guard.ts  form-validator.ts  polling-registry.ts  project-context.tsx  scenes-data.ts  tavus-prompts.ts  tavus-utils.ts  types.ts
(+85 files in other folders)
