[project]
name = "llamacon-sf-2025-05-ghost-writers-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "click==8.1.8",
    "crew==0.9.2",
    "crewai>=0.118.0",
    "distro==1.9.0",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "llama-api-client==0.1.0",
    "packaging==25.0",
    "pluggy==1.5.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pytest==7.4.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.20",
    "python3-pika==0.9.14",
    "shortuuid==1.0.13",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "uvicorn==0.34.2",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Explicitly include your Python packages and exclude non-code dirs
include = ["backend*", "ai_docs*"]
exclude = ["static*"]
